<resources>
    <string name="app_name">OpenPad</string>
    <string name="memo_btnOpen">Open</string>
    <string name="memo_btnSave">Save</string>
    <string name="memo_btnRemove">New</string>
    <string name="memo_etxtHint">Enter Contents.</string>
    <string name="memo_toast_removeSuccess">The file(%s) has been removed.</string>
    <string name="memo_toast_removeFail">The file(%s) can not be removed.</string>
    <string name="memo_toast_saveSuccess_external">The file(%s) has been saved.</string>
    <string name="memo_toast_saveFail_external">The file(%s) can not be saved.</string>
    <string name="memo_intent_opendialog">Open File</string>
    <string name="memo_alert_save_context">Choose</string>
    <string name="filebrowser_Location">Location :</string>
    <string name="filebrowser_nofiles">No files in this folder.</string>
    <string name="back_press">Press the \' Back \' button once again to exit.</string>
    <string name="filebrowser_name">File Explorer</string>
    <string-array name="menu_spinner_sort">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="main_selectalert">
        <item>File Browser</item>
        <item>App Internal folder</item>
    </string-array>
    <string name="filebrowser_etxtSaveHint">Please enter save name.</string>
    <string name="filebrowser_btnSave">Save</string>
    <string name="filebrowser_toast_error_regex">Please name include numbers, letters, and underbar(_).</string>
    <string name="memo_alert_modified_context">Detect modified contents.\nDo you want to save it?</string>
    <string name="memo_alert_modified_title">Detector</string>
    <string name="memo_alert_modified_btnSave">Save</string>
    <string name="memo_alert_modified_btnDiscard">Discard</string>
    <string name="memo_alert_modified_btnCancel">Cancel</string>
    <string name="filebrowser_name_save">File Save</string>
    <string name="filebrowser_name_open">File Open</string>
    <string name="memo_title_newFile">New Memo</string>
    <string name="folder_default">Default Folder</string>
    <string name="file_noname">Nameless Text</string>
    <string name="folder_dialog_hint_add">Input folder name</string>
    <string name="folder_dialog_title_create">New Folder</string>
    <string name="folder_dialog_button_create">Create</string>
    <string name="folder_dialog_button_cancel">Cancel</string>
    <string name="folder_dialog_toast_exist">Folder already exists.</string>
    <string name="folder_dialog_toast_delete">Deleted folder.</string>
    <string name="folder_dialog_title_delete">Delete Folder</string>
    <string name="folder_dialog_button_delete">Delete</string>
    <string name="folder_dialog_message_question_delete">Are you sure you want to delete the folder?</string>
    <string name="file_dialog_title_delete">Delete File</string>
    <string name="file_dialog_message_question_delete">Are you sure you want to delete the file?</string>
    <string name="file_dialog_toast_delete">Deleted file.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_separator_information">Program Information</string>
    <string name="settings_information_info_title">Info</string>
    <string name="settings_separator_general">General</string>
    <string name="settings_general_font_title">Font</string>
    <string name="settings_general_font_summary">General settings for fonts.</string>
    <string name="settings_information_info_summary">Program information and version.</string>
    <string name="settings_dialog_info_title">About Openpad</string>
    <string name="settings_dialog_info_copyright">Copyright © 2017 Jeon Ye Chan</string>
    <string name="settings_dialog_info_license">This program is affected by the \"Apache License 2.0\" license.</string>
    <string name="settings_dialog_info_icon">Icons : https://material.io/icons/</string>
    <string name="settings_dialog_info_ok">OK</string>
    <string name="settings_information_version_title">Version</string>
    <string name="settings_information_version_summary">Program Version</string>
    <string name="filebrowser_dialog_alert_title">Warning</string>
    <string name="settings_font_fontsize">Font Size</string>
    <string name="settings_dialog_font_context">Changing Font size affects only the note screen.</string>
    <string name="settings_font_fonttype">Font type(Custom Font)</string>
    <string name="testing_temporary">Future update scheduled.</string>
    <string name="settings_information_bug_title">Bug Report</string>
    <string name="settings_information_bug_summary">Report the bug to the developer.</string>
    <string name="folder_toast_remove_defaultfolder">The default folder can not be removed.</string>
    <string name="settings_information_help_title">Help</string>
    <string name="settings_information_help_summary">How to use a program.</string>
    <string name="settings_help_title_main">Main Screen(Activity)</string>
    <string name="settings_help_title_folder">Folder Screen(Activity)</string>
    <string name="settings_help_title_text">Memo Screen(Activity)</string>
    <string name="settings_help_main_list">Memo(File) List</string>
    <string name="settings_help_main_delete">Delete Memo(File)</string>
    <string name="settings_help_folder_list">Folder List</string>
    <string name="settings_help_folder_delete">Delete Folder</string>
    <string name="settings_help_main_memocreate">Create Memo</string>
    <string name="settings_help_folder_create">Create Folder</string>
    <string name="settings_help_folder_default">Default folder and path</string>
    <string name="settings_help_folder_external">External File Explorer</string>
    <string name="folder_externalBrowser">Open External File Explorer</string>
    <string name="settings_help_memo_savelengthlimited">Maximum length of character</string>
    <string name="settings_help_memo_fontcolor">Font Color</string>
    <string name="settings_help_main_list_context">By default, you\'ll see notes in the default folder when you run OpenPad.\nYou can call up the other folders by pressing the Folder button.</string>
    <string name="settings_help_main_memocreate_context">You can add a new note by pressing the \" Add button (+) \" at the bottom right-hand corner of the main screen.\nYou can add text memo and pictorial memo (beta function).\nNote that these additional notes can be stored in the default folder (OpenPad/Basic) of the application and stored on the external path.</string>
    <string name="settings_help_main_delete_context">You can delete the corresponding notes in the main notes by pressing them for more than 1 second.\nDelete will also be deleted from the actual mobile phone memory when deleted.\n(You can not restore it again.)</string>
    <string name="settings_help_folder_list_context">Displays the folder in the folder (OpenPad) of the application.\nThe default folder (OpenPad) can not be deleted and will be recreated if it is erased.\nFolders list consist of \" Default Folder \", \" External File Explorer \" and newly created folders.</string>
    <string name="settings_help_folder_default_context">If you run an application \" More than once \", it automatically creates a folder called \" OpenPad \", which creates a default folder for \" Basic \" folders.\nThis folder does not delete the \" Deleted \" function from the \" OpenPad \" feature, and will be recreated again if it is deleted.\n(Note that notes can not be recovered when deleted.)</string>
    <string name="settings_help_folder_create_context">You can add folders by pressing the \" Add Folder \" button on the top right.\nThe name of the folder can not be duplicated and can not create a folder called \" Basic \".</string>
    <string name="settings_help_folder_delete_context">Like delete memo, you can delete it by pressing the corresponding folder for more than 1 second.\nIf you delete a folder, all the notes in the folder will be deleted.\n(However, the default folder and file explorer can not be deleted.)</string>
    <string name="settings_help_folder_external_context">Allows you to retrieve files (. txt) from a path other than the default folder (OpenPad).\nHowever, all files imported from an external file explorer are imported temporarily into \"EUC-KR → UTF-8\".\nSo, if you leave the memo window, there is no change in the change, even if there are no changes.</string>
    <string name="settings_help_memo_savelength_context">The maximum length of the letter is unspecified.\n\" Up to 500,000 characters in English, \" and \" 250,000 characters in Korean letters, \" will be saved.\nHowever, if you pass beyond this, you will not be able to guarantee stability.</string>
    <string name="settings_help_memo_fontcolor_context">Color color is not supported for \"after update list\".\nInstead, the theme updates are scheduled to be included with the theme.</string>
    <string name="settings_help_memo_edit">Edit Memo</string>
    <string name="settings_help_memo_edit_context">Press the \" Edit button \" on the top right to enter the correction mode.\nOnce you have modified it, press and hold the \" Save button \" button on the top right.\nThe file will then be stored in the \" UTF-8 \" format.\n</string>
    <string name="settings_help_main_openfolder">Open Folder</string>
    <string name="settings_help_main_openfolder_context">Press the \" Open Folder \" button on the top left corner to view the notes contained in that folder.</string>
    <string name="settings_help_title_ect">ETC.</string>
    <string name="settings_help_etc_filecolor">Color files in an external file explorer</string>
    <string name="settings_help_etc_permission">Acquiring android permissions</string>
    <string name="settings_help_etc_abouthelp">About Help</string>
    <string name="admob_id" translatable="false">ca-app-pub-1548111636350528/4836697095</string>
    <string name="settings_help_etc_ad">Advertisement</string>
    <string name="settings_help_etc_backup">Backup</string>
    <string name="menu_main_add_text_title">Text</string>
    <string name="menu_main_add_paint_title">Paint</string>
    <string name="paint_txtBrushSize">Size : %d</string>
    <string name="paint_txtBrushRed" translatable="false">Red : %d</string>
    <string name="paint_txtBrushGreen" translatable="false">Green : %d</string>
    <string name="paint_txtBrushBlue" translatable="false">Blue : %d</string>
    <string name="settings_font_title1">Font detail settings</string>
    <string name="settings_font_basicfont">Basic font</string>
    <string name="settings_font_baedaljua">Baedalue Minjok JUA</string>
    <string name="settings_font_kopubdot">KOPUB Dotum</string>
    <string name="license_openpad">OpenPad License</string>
    <string name="license_kopub">KOPUB Dotum Font License</string>
    <string name="license_bmjua">BaeDalEu MinJok Font License</string>
    <string name="license_glide4">Glide 4 License</string>
    <string name="settings_expfunc_security_password_file_title">File Encryption</string>
    <string name="settings_expfunc_security_password_file_summary">Encrypt files using AES 256 (Text memos only)</string>
    <string name="settings_expfunc_security">Security</string>
    <string name="settings_expfunc_security_enabled">Enable Security</string>
    <string name="settings_expfunc_security_password_reset">Reset Password</string>
    <string name="settings_expfunc_security_app_title">Lock Application</string>
    <string name="settings_expfunc_security_app_summary">Set a password for the application.</string>
    <string name="settings_expfunc_security_password_key_backup_title">Backup encryption key</string>
    <string name="settings_expfunc_security_password_key_backup_summary">Back up your keys for emergency recovery.</string>
</resources>