<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.eskeptor.openTextViewer.LicenseActivity">

    <ScrollView
        android:id="@+id/license_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_openpad"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/license_title_font_size"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/license_openpad"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/license_height"
                    android:textSize="@dimen/license_font_size"
                    tools:ignore="SpUsage" />

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_glide4"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/license_title_font_size"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/license_glide"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/license_height"
                    android:textSize="@dimen/license_font_size"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_kopub"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/license_title_font_size"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/license_kopub"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/license_height"
                    android:textSize="@dimen/license_font_size"
                    tools:ignore="SpUsage" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_bmjua"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/license_title_font_size"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/license_jua"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/license_height"
                    android:layout_marginBottom="5dp"
                    android:textSize="@dimen/license_font_size"
                    tools:ignore="SpUsage" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
